Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-3842

Missing version information libmysqlclient18

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.5.28
    • 5.5.29
    • None
    • Debian Squeeze
      Debian Wheezy

    Description

      Errors are:

      /usr/sbin/exim4: /usr/lib/libmysqlclient.so.18: no version information available (required by /usr/sbin/exim4)
       
      mail: /usr/lib/libmysqlclient.so.18: no version information available (required by /usr/lib/libmu_auth.so.4)

      Checked symlinks -

      ls -la /usr/lib | grep libmysqlclient
      lrwxrwxrwx  1 root root      24 Oct 19 10:21 libmysqlclient.so.18 -> libmysqlclient.so.18.0.0
      -rw-r--r--  1 root root 3017624 Oct 19 10:21 libmysqlclient.so.18.0.0
      l

      Link appears to be fine.

      With ldd /usr/sbin/exim4 | grep libmysqlclient

      Seems like there are two entries for libmysqlclient18

      ldd /usr/sbin/exim4 | grep libmysql
      /usr/sbin/exim4: /usr/lib/libmysqlclient.so.18: no version information available (required by /usr/sbin/exim4)
      libmysqlclient.so.18 => /usr/lib/libmysqlclient.so.18 (0xb706f000)

      Same thing for libmu_auth.so.4

      ldd /usr/lib/libmu_auth.so.4 | grep libmysqlclient
      /usr/lib/libmu_auth.so.4: /usr/lib/libmysqlclient.so.18: no version information available (required by /usr/lib/libmu_auth.so.4)
      libmysqlclient.so.18 => /usr/lib/libmysqlclient.so.18 (0xb7229000)

      Occurs with both mariadb Wheezy and Squeeze repositories.

      Error does not incur with fresh installs of Debian Squeze and Wheezy and no mariadb-server installed. In this case, exim4-daemon-heavy is installed with the Squeeze or Wheezy package of libmysqlclient18.

      Please let me know if you need any further information.

      Thank you.

      Terry

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              terryr Terry Roy
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 2d
                  2d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d
                  2d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.